namespace LibraryHub.Domain.Enums;

public enum Category
{
    Fiction,
    NonFiction,
    Science,
    History,
    Biography
}