classDiagram
    class Entity {
        <<abstract>>
        +int Id
    }

    class User {
        +string Name
        +string Email
        +List<Loan> Loans
        +List<Review> Reviews
    }

    class Book {
        +string Title
        +string ISBN
        +Author Author
        +Category Category
        +List<Loan> Loans
        +List<Review> Reviews
    }

    class Author {
        +string Name
        +List<Book> Books
    }

    class Loan {
        +User User
        +Book Book
        +DateTime LoanDate
        +DateTime DueDate
        +DateTime? ReturnDate
    }

    class Review {
        +User User
        +Book Book
        +int Rating
        +string Comment
        +DateTime ReviewDate
    }

    class Category {
        <<enum>>
        Fiction
        NonFiction
        Science
        History
        Biography
    }

    Entity <|-- User
    Entity <|-- Book
    Entity <|-- Author
    Entity <|-- Loan
    Entity <|-- Review

    User "1" -- "0..*" Loan : has
    User "1" -- "0..*" Review : writes
    Book "1" -- "1" Author : written by
    Book "1" -- "1" Category : belongs to
    Book "1" -- "0..*" Loan : has
    Book "1" -- "0..*" Review : has